add steppers support on raspberry pi
update grammar and dict

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,8 @@ target_link_libraries(videoTrans ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(videoTrans ${OpenCV_LIBS})
 target_link_libraries(videoTrans ${Boost_SYSTEM_LIBRARY})
 target_link_libraries(videoTrans speech)
+if (${IS_RASP})
+    message(STATUS "On PI")
+    target_compile_definitions(IS_PI)
+    target_link_libraries(videoTrans wiringPi)
+endif ()
