--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.7)
 project(videoTrans)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 11)
 
 set(RHVOICE_LIBS "-L/usr/src/RHVoice/build/linux/audio -L/usr/src/RHVoice/src/audio -L/usr/src/RHVoice/build/linux/core -L/usr/src/RHVoice/src/core -lRHVoice_core -lRHVoice_audio")
 set(RHVOICE_DIR "/usr/local/include/RHVoice")
@@ -21,8 +21,8 @@ target_link_libraries(videoTrans ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(videoTrans ${OpenCV_LIBS})
 target_link_libraries(videoTrans ${Boost_SYSTEM_LIBRARY})
 target_link_libraries(videoTrans speech)
-if (${IS_RASP})
+if (${ON_PI})
     message(STATUS "On PI")
-    target_compile_definitions(IS_PI)
+    target_compile_definitions(videoTrans PRIVATE IS_PI=1)
     target_link_libraries(videoTrans wiringPi)
 endif ()
