--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = modules/speech
 	url = https://github.com/prostoiChelovek/speech
 	branch = master
+[submodule "modules/Pi2c"]
+	path = modules/Pi2c
+	url = https://github.com/JohnnySheppard/Pi2c
+	branch = master
